--- a/framework/index.html
+++ b/framework/index.html
@@ -3,8 +3,21 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Angular Framework</title>
+	<title>Amsterdam Ultimate 2013</title>
 	<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
+	<style type="text/css">
+		.clearfix:after { 
+		   content: "."; 
+		   visibility: hidden; 
+		   display: block; 
+		   height: 0; 
+		   clear: both;
+		}
+		h1, h2, h3{
+			margin-top: 10px;
+			margin-bottom: 10px;
+		}
+	</style>
 </head>
 <body>
 
@@ -13,6 +26,7 @@
 
 	
 	<!-- Javascripts -->
+	<script src="/moment.js" type="text/javascript"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
 	<script src="/app.js" type="text/javascript"></script>
 
