--- a/framework/index.html
+++ b/framework/index.html
@@ -1,34 +1,36 @@
 <!doctype html>
-<html lang="en" ng-app="FRAMEWORK">
+<html lang="en" ng-app="AMSTERDAMFRISBEE">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Amsterdam Ultimate 2013</title>
 	<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
-	<style type="text/css">
-		.clearfix:after { 
-		   content: "."; 
-		   visibility: hidden; 
-		   display: block; 
-		   height: 0; 
-		   clear: both;
-		}
-		h1, h2, h3{
-			margin-top: 10px;
-			margin-bottom: 10px;
-		}
-	</style>
 </head>
-<body>
-
+<body style="margin-top: 100px;" ng-cloak>
+	
 
 	<div ng-view></div>
 
 	
 	<!-- Javascripts -->
 	<script src="/moment.js" type="text/javascript"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular-resource.min.js"></script>
+	<script src="/angular-local-storage.js" type="text/javascript"></script>
+	
 	<script src="/app.js" type="text/javascript"></script>
+	
+	<script src="/models/globals.js" type="text/javascript"></script>
+	<script src="/models/tournament.js" type="text/javascript"></script>
+	<script src="/models/loader.js" type="text/javascript"></script>
+	<script src="/models/user.js" type="text/javascript"></script>
+
+	<script src="/controllers/menu.js" type="text/javascript"></script>
+	<script src="/controllers/home.js" type="text/javascript"></script>
+	<script src="/controllers/pool.js" type="text/javascript"></script>
+	<script src="/controllers/team.js" type="text/javascript"></script>
+	<script src="/controllers/game.js" type="text/javascript"></script>
 
 </body>
 </html>
